Case Study 3 Included

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filipino Emigrants</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='75' font-size='75'>🌍</text></svg>" />
 
     <!-- Fonts and CSS (optional - App also imports CSS) -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -18,8 +19,9 @@
     <!-- Vite entry for the React app -->
     <script type="module" src="/src/main.jsx"></script>
 
+    <!-- jQuery from CDN (required by template scripts) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
     <!-- Optional JS (kept from original template) -->
-    <script src="/assets/js/jquery.min.js"></script>
     <script src="/assets/js/owl-carousel.js"></script>
     <script src="/assets/js/animation.js"></script>
     <script src="/assets/js/imagesloaded.js"></script>
